[package]
name = "element-packet-forwarder"
version = "0.1.0"
authors = ["Enes Öztürk <enes.ozturk@unikie.com>"]
description = "Packet forwarder app to run element app on ghaf project"
documentation = "https://docs.rs/element-packet-forwarder"
repository = "https://github.com/enesoztrk/element-packet-forwarder"
readme = "README.md"
keywords = ["element-packet-forwarder",
            # some ideas:
            #   "logging",
            #   "api",
            #   "async",
            ]
categories = [
    # "api-bindings"
]
license = "MIT"
edition = "2021"
exclude = [
    # (optional) list any files we don't want to publish to crates.io
    # for example, assume the below is a folder which contains large `mp4` files:
    #   "examples/assets"
]

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = ["full"] }
socket2 = "0.5"
clap = {version = "^4.4",features = ["derive"]}
lazy_static = "1.4"
pnet = "^0.34"
pnet_macros = "^0.34"
nix = {version = "^0.27",features = ["net"]}

[dev-dependencies]
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
# cargo-bump: to bump package version and tag a commit at the same time.
# actually, the docs recommend installing this globally:
#   $ git clone https://github.com/rnag/cargo-bump && cd cargo-bump && cargo install --path . && cd .. && rm -rf cargo-bump
# logging utilities
log = "^0.4"
sensible-env-logger = "0.1.0"
# tokio: for `async` support
tokio = { version = "^1.0", features = ["full"] }
# Some useful libraries - uncomment if needed :-)
# tabled = "0.4.2"
# indoc = "1.0.4"
# criterion = "0.3.5"

### FEATURES #################################################################

[features]
