[package]
name = "element-packet-forwarder"
version = "0.1.0"
authors = ["Enes Öztürk <enes.ozturk@unikie.com>"]
description = "Packet forwarder app to run element app on ghaf project"
documentation = "https://docs.rs/element-packet-forwarder"
repository = "https://github.com/enesoztrk/element-packet-forwarder"
readme = "README.md"
keywords = ["element-packet-forwarder",
            # some ideas:
            #   "logging",
            #   "api",
            #   "async",
            ]
categories = [
    # "api-bindings"
]
license = "MIT"
edition = "2021"
exclude = [
    # (optional) list any files we don't want to publish to crates.io
    # for example, assume the below is a folder which contains large `mp4` files:
    #   "examples/assets"
]

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = ["full","tracing"] }
socket2 = "0.5"
clap = {version = "^4.4",features = ["derive"]}
lazy_static = "1.4"
pnet = "^0.34"
pnet_macros = "^0.34"
nix = {version = "^0.27",features = ["net"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
tokio-util="0.7.9"
[dev-dependencies]
tracing-test = "0.2.4"
static_assertions = "1.1.0"
rand = "0.8"
console-subscriber = "0.2.0"

# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
# cargo-bump: to bump package version and tag a commit at the same time.
# actually, the docs recommend installing this globally:
#   $ git clone https://github.com/rnag/cargo-bump && cd cargo-bump && cargo install --path . && cd .. && rm -rf cargo-bump
# logging utilities


### FEATURES #################################################################

[features]

### TESTS
[[example]]
name = "tcp-pinecone-server-tokio-console"
path = "examples/tcp_pinecone_server_tokio_console.rs"

[[example]]
name = "tcp-pinecone-server"
path = "examples/tcp_pinecone_server.rs"


[[example]]
name = "element-packet-forwarder-tokio-console"
path = "examples/element_packet_forwarder_tokio_console.rs"



[package.metadata.scripts]
run = "cargo run"
check = "cargo check"
build = "cargo build"
release = "cargo build --release"
